--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,6 +16,16 @@ jobs:
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
+        with:
+          tinytex: true  # for pdf
+
+      # From https://github.com/rspatial/terra/blob/master/.github/workflows/pkgdown.yml
+      # - name: Install spatial dependencies
+      #   run: brew install gdal proj
+      #
+      # From https://github.com/actions/setup-python
+      # - name: Setup Python
+      #   uses: actions/setup-python@v3
 
       - name: Install R
         uses: r-lib/actions/setup-r@v2
