--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,10 +1,25 @@
 project:
   type: book
+  output-dir: _book
+  resources:
+  - "/.nojekyll"
 
 book:
   title: "sdm-book"
-  author: "Norah Jones"
-  date: "11/17/2023"
+  subtitle: "Species Distribution Modeling for MarineBON"
+  author: "Ben Best"
+  repo-url: https://github.com/marinebon/sdm-book
+  reader-mode: true
+  repo-actions: [edit]
+  search: true
+  date: today
+  date-format: "YYYY-MM-DD"
+  page-navigation: true
+  page-footer:
+    left: |
+      Website created by Ben Best, with attribution to external content
+    right: |
+      This book was built with <a href="https://quarto.org/" target="_blank">Quarto</a>
   chapters:
     - index.qmd
     - intro.qmd
@@ -15,7 +30,16 @@ bibliography: references.bib
 
 format:
   html:
-    theme: cosmo
+    toc: true
+    number-sections: true
+    code-fold: true
+    code-tools: true
+    mermaid:
+      theme: neutral
+    theme:
+      dark: darkly
+      light: flatly
+
   pdf:
     documentclass: scrreprt
 
