--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,6 +32,10 @@ jobs:
         with:
           r-version: '4.3.0'
 
+      - name: "Install R packages (while renv not working for glossary)"
+        run: |
+          Rscript -e "remotes::install_github('debruine/glossary')"
+
       - name: Install R Dependencies
         uses: r-lib/actions/setup-renv@v2
         with:
