--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,8 +16,8 @@ jobs:
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
-        with:
-          tinytex: true  # for pdf
+        # with:
+        #   tinytex: true  # for pdf
 
       # From https://github.com/rspatial/terra/blob/master/.github/workflows/pkgdown.yml
       # - name: Install spatial dependencies
