--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,8 +16,8 @@ jobs:
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
-        # with:
-        #   tinytex: true  # for pdf
+        with:
+          tinytex: true  # for pdf
 
       # From https://github.com/rspatial/terra/blob/master/.github/workflows/pkgdown.yml
       # - name: Install spatial dependencies
@@ -31,10 +31,6 @@ jobs:
         uses: r-lib/actions/setup-r@v2
         with:
           r-version: '4.3.0'
-
-      # - name: "Install R packages (while renv not working for glossary)"
-      #   run: |
-      #     Rscript -e "remotes::install_github('debruine/glossary')"
 
       - name: Install R Dependencies
         uses: r-lib/actions/setup-renv@v2
