explorations: + obis-top-spp-by-class, fix others

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -45,6 +45,7 @@ book:
         - explorations/am-fine.qmd
         - explorations/am-envelope.qmd
         - "explorations/sdm-1_predicts.qmd"
+        - "explorations/obis-top-spp-by-class.qmd"
 
 bibliography: references.bib
 
