+ portal.qmd; + proposed partners

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -46,6 +46,7 @@ book:
         - mosaic.qmd
         - taxa.qmd
         - indicators.qmd
+        - portal.qmd
     - software.qmd
     - organize.qmd
     - references.qmd
