+ America the Beautiful reference

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -80,7 +80,7 @@ format:
     theme:
       light: flatly
       dark: darkly
-    css: glossary.css
+    css: glossary/glossary.css
   pdf:
     documentclass: scrreprt
     keep-tex: true
